# audio_capture

./: LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/github/BBeBeeX/example/: MainActivity.kt
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc
ios/: audio_capture.podspec
ios/Classes/: AudioCapturePlugin.swift
lib/: audio_capture.dart  audio_capture_base.dart  audio_output_capture.dart  method_channel__audio_capture.dart
lib/src/: audio_capture_bindings.dart
macos/: audio_capture.podspec
native/: CMakeLists.txt  windows.toolchain.cmake
native/scripts/: android_build.sh  windows_build.bat
native/src/: audio_capture.cpp  audio_capture.h
test/: audio_capture_method_channel_test.dart
windows/: CMakeLists.txt
